--- a/django_wordcount/wordcount/templates/index.html
+++ b/django_wordcount/wordcount/templates/index.html
@@ -57,7 +57,7 @@
                     <a class="nav-link js-scroll" href="#goal">Goal_April</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll" href="{% url 'test' %}">WordCount(신규)</a>
+                    <a class="nav-link js-scroll" href="{% url 'test' %}">WordCount</a>
                 </li>
 
             </ul>
